// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AuthRequiredDialog rendering tests custom description - test 1`] = `
<div>
  <div
    data-slot="dialog"
    data-testid="mock-react-dialog-root"
  >
    <div
      data-slot="dialog-portal"
      data-testid="mock-react-dialog-portal"
    >
      <div
        class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
        data-slot="dialog-overlay"
        data-testid="mock-react-dialog-overlay"
      />
      <div
        class="bg-background data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 fixed top-[50%] left-[50%] z-50 grid w-full max-w-[calc(100%-2rem)] translate-x-[-50%] translate-y-[-50%] gap-4 rounded-lg border p-6 shadow-lg duration-200 sm:max-w-lg"
        data-slot="dialog-content"
        data-testid="auth-required-dialog"
      >
        <div
          class="flex justify-center"
        >
          <div
            class="rounded-full bg-primary/10 p-4"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-log-in h-6 w-6 text-primary"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m10 17 5-5-5-5"
              />
              <path
                d="M15 12H3"
              />
              <path
                d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"
              />
            </svg>
          </div>
        </div>
        <div
          class="flex flex-col gap-2 sm:text-left text-center"
          data-slot="dialog-header"
        >
          <div
            class="text-lg leading-none font-semibold text-center"
            data-slot="dialog-title"
            data-testid="mock-react-dialog-title"
          >
            Fast geschafft!
          </div>
          <div
            class="text-muted-foreground text-sm"
            data-slot="dialog-description"
            data-testid="mock-react-dialog-description"
          >
            Bitte melde dich an, um Vorlagen zu übernehmen.
          </div>
        </div>
        <div
          class="flex sm:justify-end flex-col items-center gap-3 sm:flex-col"
          data-slot="dialog-footer"
        >
          <a
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-10 rounded-md px-6 has-[>svg]:px-4 w-full cursor-pointer"
            data-slot="button"
            data-testid="auth-required-sign-in-btn"
            href="/auth/sign-in?redirect=/explore/my-template"
          >
            Anmelden
          </a>
          <p
            class="text-center text-sm text-muted-foreground"
          >
            Noch kein Konto?
             
            <a
              class="cursor-pointer font-medium text-foreground hover:underline"
              data-testid="auth-required-register-link"
              href="/auth/sign-up?redirect=/explore/my-template"
            >
              Kostenlos starten
            </a>
          </p>
        </div>
        <button
          class="ring-offset-background focus:ring-ring data-[state=open]:bg-accent data-[state=open]:text-muted-foreground absolute top-4 right-4 rounded-xs opacity-70 transition-opacity hover:opacity-100 focus:ring-2 focus:ring-offset-2 focus:outline-hidden disabled:pointer-events-none [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
          data-slot="dialog-close"
          data-testid="mock-react-dialog-close"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
          <span
            class="sr-only"
          >
            Close
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`AuthRequiredDialog rendering tests custom title - test 1`] = `
<div>
  <div
    data-slot="dialog"
    data-testid="mock-react-dialog-root"
  >
    <div
      data-slot="dialog-portal"
      data-testid="mock-react-dialog-portal"
    >
      <div
        class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
        data-slot="dialog-overlay"
        data-testid="mock-react-dialog-overlay"
      />
      <div
        class="bg-background data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 fixed top-[50%] left-[50%] z-50 grid w-full max-w-[calc(100%-2rem)] translate-x-[-50%] translate-y-[-50%] gap-4 rounded-lg border p-6 shadow-lg duration-200 sm:max-w-lg"
        data-slot="dialog-content"
        data-testid="auth-required-dialog"
      >
        <div
          class="flex justify-center"
        >
          <div
            class="rounded-full bg-primary/10 p-4"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-log-in h-6 w-6 text-primary"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m10 17 5-5-5-5"
              />
              <path
                d="M15 12H3"
              />
              <path
                d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"
              />
            </svg>
          </div>
        </div>
        <div
          class="flex flex-col gap-2 sm:text-left text-center"
          data-slot="dialog-header"
        >
          <div
            class="text-lg leading-none font-semibold text-center"
            data-slot="dialog-title"
            data-testid="mock-react-dialog-title"
          >
            Konto erforderlich
          </div>
          <div
            class="text-muted-foreground text-sm"
            data-slot="dialog-description"
            data-testid="mock-react-dialog-description"
          >
            Für diese Aktion benötigst du ein Konto.
          </div>
        </div>
        <div
          class="flex sm:justify-end flex-col items-center gap-3 sm:flex-col"
          data-slot="dialog-footer"
        >
          <a
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-10 rounded-md px-6 has-[>svg]:px-4 w-full cursor-pointer"
            data-slot="button"
            data-testid="auth-required-sign-in-btn"
            href="/auth/sign-in?redirect=/explore/my-template"
          >
            Anmelden
          </a>
          <p
            class="text-center text-sm text-muted-foreground"
          >
            Noch kein Konto?
             
            <a
              class="cursor-pointer font-medium text-foreground hover:underline"
              data-testid="auth-required-register-link"
              href="/auth/sign-up?redirect=/explore/my-template"
            >
              Kostenlos starten
            </a>
          </p>
        </div>
        <button
          class="ring-offset-background focus:ring-ring data-[state=open]:bg-accent data-[state=open]:text-muted-foreground absolute top-4 right-4 rounded-xs opacity-70 transition-opacity hover:opacity-100 focus:ring-2 focus:ring-offset-2 focus:outline-hidden disabled:pointer-events-none [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
          data-slot="dialog-close"
          data-testid="mock-react-dialog-close"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
          <span
            class="sr-only"
          >
            Close
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`AuthRequiredDialog rendering tests isOpen false - test 1`] = `
<div>
  <div
    data-slot="dialog"
    data-testid="mock-react-dialog-root"
  >
    <div
      data-slot="dialog-portal"
      data-testid="mock-react-dialog-portal"
    >
      <div
        class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
        data-slot="dialog-overlay"
        data-testid="mock-react-dialog-overlay"
      />
    </div>
  </div>
</div>
`;

exports[`AuthRequiredDialog rendering tests isOpen true - test 1`] = `
<div>
  <div
    data-slot="dialog"
    data-testid="mock-react-dialog-root"
  >
    <div
      data-slot="dialog-portal"
      data-testid="mock-react-dialog-portal"
    >
      <div
        class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
        data-slot="dialog-overlay"
        data-testid="mock-react-dialog-overlay"
      />
      <div
        class="bg-background data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 fixed top-[50%] left-[50%] z-50 grid w-full max-w-[calc(100%-2rem)] translate-x-[-50%] translate-y-[-50%] gap-4 rounded-lg border p-6 shadow-lg duration-200 sm:max-w-lg"
        data-slot="dialog-content"
        data-testid="auth-required-dialog"
      >
        <div
          class="flex justify-center"
        >
          <div
            class="rounded-full bg-primary/10 p-4"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-log-in h-6 w-6 text-primary"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m10 17 5-5-5-5"
              />
              <path
                d="M15 12H3"
              />
              <path
                d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"
              />
            </svg>
          </div>
        </div>
        <div
          class="flex flex-col gap-2 sm:text-left text-center"
          data-slot="dialog-header"
        >
          <div
            class="text-lg leading-none font-semibold text-center"
            data-slot="dialog-title"
            data-testid="mock-react-dialog-title"
          >
            Fast geschafft!
          </div>
          <div
            class="text-muted-foreground text-sm"
            data-slot="dialog-description"
            data-testid="mock-react-dialog-description"
          >
            Für diese Aktion benötigst du ein Konto.
          </div>
        </div>
        <div
          class="flex sm:justify-end flex-col items-center gap-3 sm:flex-col"
          data-slot="dialog-footer"
        >
          <a
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-10 rounded-md px-6 has-[>svg]:px-4 w-full cursor-pointer"
            data-slot="button"
            data-testid="auth-required-sign-in-btn"
            href="/auth/sign-in?redirect=/explore/my-template"
          >
            Anmelden
          </a>
          <p
            class="text-center text-sm text-muted-foreground"
          >
            Noch kein Konto?
             
            <a
              class="cursor-pointer font-medium text-foreground hover:underline"
              data-testid="auth-required-register-link"
              href="/auth/sign-up?redirect=/explore/my-template"
            >
              Kostenlos starten
            </a>
          </p>
        </div>
        <button
          class="ring-offset-background focus:ring-ring data-[state=open]:bg-accent data-[state=open]:text-muted-foreground absolute top-4 right-4 rounded-xs opacity-70 transition-opacity hover:opacity-100 focus:ring-2 focus:ring-offset-2 focus:outline-hidden disabled:pointer-events-none [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
          data-slot="dialog-close"
          data-testid="mock-react-dialog-close"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
          <span
            class="sr-only"
          >
            Close
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
